--- a/templates/report.html
+++ b/templates/report.html
@@ -27,7 +27,7 @@
     <p>{{ n_tests }} tests ran in {{ duration }} seconds. </p>
     
     {% for child in children recursive %}
-        <h2 id="heading-{{ child.id }}{{ child.children[0].random_seed }}">{{ child.prefix }} {{ child.short_name }}</h2>
+        <h2 id="heading-{{ child.id }}">{{ child.prefix }} {{ child.short_name }}</h2>
         <p><a href="javascript:scroll_to_top()">Scroll to top</a> / <a href="javascript:scroll_to_parent('{{ child.parent_id }}')">Scroll to parent</a></p>
         {% if not child.is_leaf %}
             {# Create a summary table for the collection of collections #}
@@ -47,7 +47,7 @@
                 {% for inner_child in child.children -%}
                 <tbody class="results-table-row">
                     <tr>
-                        <td onclick="scroll_to(this)" class="scroller" id="{{ inner_child.id }}{{ inner_child.children[0].random_seed }}">{{ inner_child.short_name }}</td>
+                        <td onclick="scroll_to(this)" class="scroller" id="{{ inner_child.id }}">{{ inner_child.short_name }}</td>
                         <td class="summary-result rel_pass">{{ inner_child.p_passed }}</td>
                         <td class="summary-result">{{ inner_child.n_passed }}</td>
                         <td class="summary-result">{{ inner_child.n_skipped }}</td>
