changed first column of summary tables to sort using strings

--- a/templates/report.html
+++ b/templates/report.html
@@ -34,7 +34,7 @@
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">{{ child.child_type }}</th>
+                        <th class="sortable custom asc">{{ child.child_type }}</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
